k8s/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 31300

---
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 31080
